Add status to books table
